@@ -162,3 +162,19 @@ void otrl_mem_init(void)
 	    otrl_mem_free
 	);
 }
+
+/* Compare two memory blocks in time dependent on the length of the
+ * blocks, but not their contents.  Returns 1 if they differ, 0 if they
+ * are the same. */
+int otrl_mem_differ(const unsigned char *buf1, const unsigned char *buf2,
+    size_t len)
+{
+    unsigned char diff = 0;
+    while (len) {
+	diff |= ((*buf1) ^ (*buf2));
+	++buf1;
+	++buf2;
+	--len;
+    }
+    return (diff != 0);
+}
