@@ -21,6 +21,14 @@
 #ifndef __MEM_H__
 #define __MEM_H__
 
+#include <stdlib.h>
+
 void otrl_mem_init(void);
+
+/* Compare two memory blocks in time dependent on the length of the
+ * blocks, but not their contents.  Returns 1 if they differ, 0 if they
+ * are the same. */
+int otrl_mem_differ(const unsigned char *buf1, const unsigned char *buf2,
+    size_t len);
 
 #endif
